<resources>
    <string name="app_name">QR Toolkit</string>
    <string name="qr" translatable="false">QR</string>
    <string name="toolkit">Toolkit</string>
    <string name="drawer_close" translatable="false">Drawer Close</string>
    <string name="drawer_open" translatable="false">Drawer Open</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="scan_code">Scan Code</string>
    <string name="generate_code">Generate Code</string>
    <string name="results">Results</string>
    <string name="enter_your_text">Enter Your Text</string>
    <string name="save">Save</string>
    <string name="error_generating_the_code">Error Generating The Code</string>
    <string name="enter_code_text">Enter Code Text</string>
    <string name="share_code">Share QR Code</string>
    <string name="qr_saved">QR Code Saved Successfully</string>
    <string name="error_qr_saved">Error Saving QR Code</string>
    <string name="perms_rational">We need this permission to save the qr code to device\'s storage</string>
    <string name="accept_perms">You need to accept the permissions</string>
    <string name="scanned">Scanned</string>
    <string name="generated">Generated</string>
    <string name="qr_title_copied">QR title copied successfully</string>
    <string name="delete">Delete</string>
    <string name="delete_qr_msg">Are you sure you want to delete this QR code ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_items">No Items Found</string>
    <string name="copy">Copy</string>
    <string name="share_qr_result">Share Code Result</string>
    <string name="share_msg" translatable="false">Check out this QR code app</string>
    <string name="share_app">Share App</string>
    <string name="language">Language</string>
    <string name="select_language">Select Language</string>
    <string name="privacy_policy">Privacy Policy</string>


    <array name="languagesList">
        <item>English</item>
        <item>العربية</item>
    </array>

    <array name="languageCode">
        <item>en</item>
        <item>ar</item>
    </array>
</resources>