<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"
            android:checkable="true"/>

        <item android:id="@+id/history"
            android:title="@string/history"
            android:icon="@drawable/ic_history"
            android:checkable="true"/>

        <item android:id="@+id/share"
            android:title="@string/share"
            android:icon="@drawable/ic_share"
            android:checkable="true"/>

        <item android:id="@+id/rate"
            android:title="@string/rate"
            android:icon="@drawable/ic_rate"
            android:checkable="true"/>

        <item android:id="@+id/language"
            android:title="@string/language"
            android:icon="@drawable/ic_languages"
            android:checkable="true"/>

        <item android:id="@+id/privacy_policy"
            android:title="@string/privacy_policy"
            android:icon="@drawable/ic_privacy_policy"
            android:checkable="true"/>
    </group>

</menu>