<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GenerateQrActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/_30sdp">

            <RelativeLayout
                android:id="@+id/q"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/qr_square_white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/qr"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/results"
                android:textSize="@dimen/_18ssp"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/_5sdp"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        app:cardCornerRadius="@dimen/_15sdp"
        android:layout_below="@id/toolbar"
        android:layout_margin="@dimen/_30sdp"
        app:cardBackgroundColor="@color/colorAccent">
        <EditText
            android:id="@+id/qr_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:hint="@string/enter_your_text"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            android:padding="@dimen/_10sdp"/>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/generate_code"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:backgroundTint="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:text="@string/generate_code"
        android:textSize="@dimen/_20ssp"/>
</RelativeLayout>