<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GeneratedCodeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/_30sdp">

            <RelativeLayout
                android:id="@+id/q"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/qr_square_white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/qr"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/results"
                android:textSize="@dimen/_18ssp"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/_5sdp"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>


    <ImageView
        android:id="@+id/qr_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/go_home"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_40sdp">

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/save"
            android:textSize="@dimen/_20ssp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:layout_marginHorizontal="@dimen/_5sdp"/>

        <Button
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/share"
            android:textSize="@dimen/_20ssp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:layout_marginHorizontal="@dimen/_5sdp"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/go_home"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:cardBackgroundColor="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_40sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_home"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_15sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/home"
                android:textSize="@dimen/_25ssp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_bold"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>